fix the overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,18 +96,21 @@
 
 /*The title bars are id's instead of classes because the CSS was getting over-ridden and I needed to raise the importance level*/
 #title_bar_private {
-  margin: 0% -100% 10% -100%;
+  margin: 10% 0 10% 0;
   padding: 5vh;
+  overflow: hidden;
 }
 
 #title_bar_space {
-  margin: 0% -100% 10% -100%;
+  margin: 10% 0% 10% 0%;
   padding: 5vh;
+  overflow: hidden;
 }
 
 #title_bar_services {
-  margin: 0% -100% 10% -100%;
+  margin: 10% 0% 10% -1.5%;
   padding: 5vh;
+  overflow: hidden;
 }
 
 .float_left {
